# Oops

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: CHANGELOG.md  DEVELOPMENT.md  PLAN.md  README.md
oops-cli/: Cargo.toml
oops-cli/src/: cli.rs  fix_command.rs  main.rs
oops-core/: Cargo.toml
oops-core/src/: command.rs  config.rs  consts.rs  corrected_command.rs  corrector.rs  lib.rs  logger.rs  rule.rs  utils.rs
oops-rules/: Cargo.toml
oops-rules/src/: apt_get.rs  apt_get_search.rs  brew_install.rs  brew_unknown_command.rs  cargo_no_command.rs  cd_mkdir.rs  cd_parent.rs  chmod_x.rs  composer_command.rs  cp_omitting_dir.rs  docker_not_command.rs  git_add.rs  git_branch_delete.rs  git_branch_exists.rs  git_commit_amend.rs  git_merge.rs  git_not_command.rs  git_pull_uncommitted.rs  git_push_pull.rs  git_rm_staged.rs  git_stash.rs  grep_recursive.rs  lib.rs  ls_all.rs  man_no_space.rs  mkdir_p.rs  no_command.rs  no_such_file.rs  npm_run_script.rs  npm_wrong_command.rs  pip_install.rs  pip_unknown_command.rs  port_already_use.rs  python_execute.rs  rm_dir.rs  sl_ls.rs  ssh_known_hosts.rs  sudo.rs  systemctl.rs  touch.rs  (+1 more)
oops-shell/: Cargo.toml
oops-shell/src/: bash.rs  lib.rs  powershell.rs  shell_trait.rs  utils.rs  zsh.rs
oops-tui/: Cargo.toml
oops-tui/src/: app.rs  event.rs  lib.rs  state.rs
oops-tui/src/components/: input_bar.rs  list_panel.rs  mod.rs  preview_panel.rs  status_bar.rs
