[workspace]
members = [
    "oops-core",
    "oops-shell",
    "oops-rules",
    "oops-tui",
    "oops-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Oops contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
once_cell = "1"
regex = "1"
dirs = "5"
strsim = "0.11"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
nucleo = "0.5"
similar = "2"
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
