[package]
name = "oops-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "oops"
path = "src/main.rs"

[dependencies]
oops-core = { path = "../oops-core" }
oops-shell = { path = "../oops-shell" }
oops-rules = { path = "../oops-rules" }
oops-tui = { path = "../oops-tui" }
clap = { workspace = true }
toml = { workspace = true }
color-eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
