[package]
name = "oops-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
strsim = { workspace = true }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
